# Lib15x

./: .gitignore  .gitmodules  Doxyfile  README.md
src/: CLMatrixDynamic.hpp  CLMatrixStatic.hpp  CMakeLists.txt  Main.cc  Makefile
src/examples/: CMakeLists.txt  bagging_classifier_example.cc  cross_validation.cc  cross_validation_example.cc  gradient_boosting_regressor_example.cc  lib_svm_example.cc  linear_logistic_regression_example.cc  linear_ridge_regression.cc  linear_ridge_regression_example.cc  multiclass_lib_svm_example.cc  quadratic_programming_example.cc  random_forest_classifier_example.cc  support_vector_classifier_example.cc  tree_classifier_example.cc  tree_regressor_example.cc
src/include/: Lib15x.hpp
src/include/algorithms/: QuadraticProgramming.hpp
src/include/core/: Definitions.hpp  Utilities.hpp
src/include/internal/: _BaseClassifier.hpp  _BaseCriterion.hpp  _BaseRegressor.hpp  _BaseTree.hpp  _Builder.hpp  _ClassificationCriterion.hpp  _ClassificationTree.hpp  _Criterion.hpp  _RegressionCriterion.hpp  _RegressionTree.hpp  _Splitter.hpp  _Tree.hpp  _TreeUtilities.hpp
src/include/kernels/: #KernelDot.hpp#  .#KernelDot.hpp  KernelDot.hpp  KernelPolynomial.hpp  KernelRBF.hpp  KernelSigmoid.hpp  kernels.hpp
src/include/mathematics/: MatrixStatic.hpp
src/include/models/: BaggingClassifier.hpp  ClassifierTemplate.hpp  GradientBoostingClassifier.hpp  GradientBoostingRegressor.hpp  LibSVM.hpp  LinearLogisticRegression.hpp  LinearRidgeRegression.hpp  ModelTemplate.hpp  MulticlassClassifier.hpp  RandomForestClassifier.hpp  RegressorTemplate.hpp  SupportVectorClassifier.hpp  TreeClassifier.hpp  TreeRegressor.hpp  models.hpp
src/include/preprocessing/: MinMaxScaler.hpp  StandardScaler.hpp  preprocessing.hpp
src/include/validation/: CrossValidation.hpp  validation.hpp
src/tests/: CMakeLists.txt  DenseDynamicMatrix_unit.cc  DenseStaticMatrix_unit.cc  LibSVM_unit.cc  Main.cc  MatrixStatic_unit.cc  ModelTemplate_unit.cc  Scaler_unit.cc  SupportVectorClassifier_unit.cc  TreeClassifier_unit.cc
